@@ -97,6 +97,7 @@ import org.labkey.api.module.ModuleLoader;
 import org.labkey.api.module.SchemaUpdateType;
 import org.labkey.api.module.SpringModule;
 import org.labkey.api.module.Summary;
+import org.labkey.api.mcp.McpService;
 import org.labkey.api.notification.EmailMessage;
 import org.labkey.api.notification.EmailService;
 import org.labkey.api.notification.NotificationMenuView;
@@ -252,6 +253,7 @@ import org.labkey.core.login.DbLoginManager;
 import org.labkey.core.login.LoginController;
 import org.labkey.core.metrics.SimpleMetricsServiceImpl;
 import org.labkey.core.metrics.WebSocketConnectionManager;
+import org.labkey.core.mpc.McpServiceImpl;
 import org.labkey.core.notification.EmailPreferenceConfigServiceImpl;
 import org.labkey.core.notification.EmailPreferenceContainerListener;
 import org.labkey.core.notification.EmailPreferenceUserListener;
@@ -559,8 +561,11 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
 
         ScriptEngineManagerImpl.registerEncryptionMigrationHandler();
 
+        McpService.get().register(new CoreMcp());
+
         deleteTempFiles();
     }
+
 
     private void deleteTempFiles()
     {
@@ -644,7 +649,7 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
         // For audit purposes, we use the first user as the originator of the message.
         // Would be better to have this be a site admin, but we aren't guaranteed to have such a user
         // for hosted sites. Another option is to use the guest user here, but that's strange.
-        svc.sendMessages(messages, users.get(0), ContainerManager.getRoot());
+        svc.sendMessages(messages, users.getFirst(), ContainerManager.getRoot());
     }
 
     private @Nullable String getValue(Map<StashedStartupProperties, StartupPropertyEntry> map, StashedStartupProperties prop)
@@ -1230,9 +1235,11 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
 
             if (CoreSchema.getInstance().getSqlDialect().isPostgreSQL())
             {
+                // Exclude temp schema to avoid PG exceptions when tables are appearing/disappearing during execution
+                // Note that they can be non-trivial in size.
                 SQLFragment sql = new SQLFragment("SELECT table_schema, SUM(total_size) FROM ");
                 sql.append(new PostgresTableSizesTable(new PostgresUserSchema(User.getAdminServiceUser(), ContainerManager.getRoot())), "t");
-                sql.append(" GROUP BY table_schema");
+                sql.append(" WHERE table_schema != 'temp' GROUP BY table_schema");
 
                 var schemaSizes = new SqlSelector(CoreSchema.getInstance().getSchema(), sql).getValueMap();
                 results.put("databaseSchemaSize", schemaSizes);
@@ -1280,6 +1287,8 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
 
         CoreMigrationSchemaHandler.register();
         Encryption.checkMigration();
+
+        McpServiceImpl.get().startMpcServer();
     }
 
     // Issue 7527: Auto-detect missing SQL views and attempt to recreate
@@ -1308,6 +1317,9 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
         _webdavServletDynamic = servletCtx.addServlet("static", new WebdavServlet(true));
         _webdavServletDynamic.setMultipartConfig(SpringActionController.getMultiPartConfigElement());
         _webdavServletDynamic.addMapping("/_webdav/*");
+
+        McpService.setInstance(new McpServiceImpl());
+        McpServiceImpl.get().registerServlets(servletCtx);
     }
 
     @Override
@@ -1594,15 +1606,17 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
             properties.put(SearchService.PROPERTY.categories.toString(), SearchService.navigationCategory.getName());
             ActionURL startURL = PageFlowUtil.urlProvider(ProjectUrls.class).getStartURL(c);
             startURL.setExtraPath(c.getId());
-            WebdavResource doc = new SimpleDocumentResource(c.getParsedPath(),
-                    "link:" + c.getId(),
-                    c.getEntityId(),
-                    "text/plain",
-                    body,
-                    startURL,
-                    UserManager.getUser(c.getCreatedBy()), c.getCreated(),
-                    null, null,
-                    properties);
+            WebdavResource doc = new SimpleDocumentResource(
+                c.getParsedPath(),
+                "link:" + c.getId(),
+                c.getEntityId(),
+                "text/plain",
+                body,
+                startURL,
+                UserManager.getUser(c.getCreatedBy()), c.getCreated(),
+                null, null,
+                properties
+            );
             queue.addResource(doc);
         };
         r.run();
@@ -1672,8 +1686,9 @@ public class CoreModule extends SpringModule implements SearchService.DocumentPr
                 if (supportFolder != null)
                 {
                     MutableSecurityPolicy supportPolicy = new MutableSecurityPolicy(supportFolder.getPolicy());
-                    for (Role assignedRole : supportPolicy.getAssignedRoles(guests))
-                        supportPolicy.removeRoleAssignment(guests, assignedRole);
+                    supportPolicy.getAssignedRoles(guests).forEach(assignedRole ->
+                        supportPolicy.removeRoleAssignment(guests, assignedRole)
+                    );
                     SecurityPolicyManager.savePolicy(supportPolicy, User.getAdminServiceUser());
                 }
             }
